# simple_web_svr

./: .gitignore  .gitmodules  CMakeLists.txt  License  clearBuild.sh  readme.txt
src/: AppMgr.cpp  AppMgr.h  CMakeLists.txt  cfg.cpp  cfg.h  log_def.h  main.cpp  svr.cpp  svr.h
tool/: run.py
vs/: lib.lua  premake5.lua
